# bugos

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: safety.yml
bugos/: __init__.py
docs/: agent_autopilot_policy.md  revenue_autopilot_stop_check.md  revenue_backlog.md  revenue_engine_policy.md  sentinel_data_guardian_architecture.md
docs/delivery/: README.md  sample_buyer_handoff.md
docs/demo/: README.md  synthetic_output_pack.md  synthetic_program_brief.md
docs/intakes/quizlet/: README.md  disqualifier_check.md  evidence_manifest_template.json  final_submission_check.json  (+6 more)
docs/offers/: buyer_handoff.md  core_offer.md  landing_page_copy.md  service_menu.md
docs/sales/: manual_outreach_drafts.md  pricing_hypothesis.md
docs/sponsors/: maintainer_setup_checklist.md  sponsorship_overview.md  tier_drafts.md
docs/trust/: data_handling_notice.md  terms_of_use_notes.md
fixtures/: sample_brief.json  sample_report_bad.md  sample_report_good.md
fixtures/evidence/: synthetic_request_response.txt
scripts/: check_revenue_autopilot.py  check_safety_invariants.py
src/bugos/: __init__.py  brief_normalizer.py  brief_schema_validator.py  cli.py  evidence_manifest.py  final_submission_check.py  hashing.py  io_safe.py  models.py  report_linter.py  scope_guard.py
tests/: test_brief.py  test_cli.py  test_evidence_and_final.py  test_io_safe.py  test_local_review_metadata.py  test_report_linter.py  test_scope_guard.py  test_sentinel_policy.py
(+2 files in other folders)
