[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugos"
version = "0.1.0"
description = "Offline Bugcrowd operations helper: brief normalization, scope gating, report linting, evidence manifesting, and final submission checks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "BugOS Operator"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bugos = "bugos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
